--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,8 @@
 /composer.json        export-ignore
 /package-lock.json    export-ignore
 /README.md            export-ignore
+/.eslintrc            export-ignore
+/.eslintignore        export-ignore
 
 # Handle line endings.
 # See https://help.github.com/articles/dealing-with-line-endings/
